<resources>
    <string name="app_name">Diego-RivasShop</string>
    <string name="welcome_message">Welcome to the gem shop</string>
    <string name="button_main">Next</string>
    <string name="thanks_message">Thanks for using my app!</string>
    <string name="instruction_message">This shop contain some noticeable gemstone such as ruby,
        or sapphire. We sell some really rare gemstone too</string>
    <string name="button_menu">Proceed</string>
    <string name="menu_title">Shop</string>
    <string name="amount_cart">Amount in the cart:</string>

    <string name="amethyst_title">Amethyst</string>
    <string name="amethyst_price">$137.52</string>
    <string name="amethyst_description">This gemstone is a 9 carat luxury amethyst that comes from
        Africa</string>

    <string name="ruby_title">Ruby</string>
    <string name="ruby_price">$515.70</string>
    <string name="ruby_description">This 9 carat ruby is a really beauty to gaze ones eyes upon.</string>

    <string name="yellowDiamond_title">Yellow Diamond</string>
    <string name="yellowDiamond_price">$10,000</string>
    <string name="yellowDiamond_description">This polished yellow diamond originates from Mumbai.</string>

    <string name="sapphire_title">Sapphire</string>
    <string name="sapphire_price">$429.75</string>
    <string name="sapphire_description">This is a 9 carat sapphire originates from Thailand</string>

    <string name="phosphophyllite_title">Phosphophyllite</string>
    <string name="phosphophyllite_price">$800</string>
    <string name="phosphophyllite_description">This incredibly rare and fragile mineral comes
        from Bolivia. </string>

    <string name="description_main_gemstone">Picture of a gemstone</string>
    <string name="checkout_title">Checkout</string>
    <string name="subtotal_label">Subtotal:</string>
    <string name="tps_label">TPS:</string>
    <string name="tvq_label">TVQ:</string>
    <string name="total_label">Total:</string>
</resources>
