<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/phosphophyllite_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/phosphophyllite_title"
        android:textSize="25sp"
        android:textAlignment="center"/>

    <ImageView
        android:id="@+id/phosphophyllite_image"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:srcCompat="@mipmap/ic_phosphophyllite_foreground" />

    <TextView
        android:id="@+id/price_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/phosphophyllite_price" />

    <TextView
        android:id="@+id/description_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/phosphophyllite_description" />
</LinearLayout>