<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/yellowDiamond_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/yellowDiamond_title"
        android:textSize="25sp"
        android:textAlignment="center"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@mipmap/ic_yellow_diamond_foreground" />

        <TextView
            android:id="@+id/yellow_diamond_price_label"
            android:layout_width="@dimen/price_label_width"
            android:layout_height="wrap_content"
            android:text="@string/yellowDiamond_price"
            android:textSize="@dimen/price_size" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Button
                android:id="@+id/add_yellow_diamond_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Add"
                android:onClick="addItemAll"/>

            <Button
                android:id="@+id/remove_yellow_diamond_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Remove"
                android:onClick="removeItemAll"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/amount_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/amount_cart" />

            <TextView
                android:id="@+id/yellow_diamond_amount_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="0"
                android:textSize="@dimen/amount_size" />
        </LinearLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/description_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/yellowDiamond_description" />


</LinearLayout>